# fileshare

./: .gitignore  AGENTS.md  README.md  docker-compose.yaml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cicd.yaml  destroy-aws-architecture.yaml
backend/: .env.example  Cargo.toml  bacon.toml  rustfmt.toml
backend/migrations/: 20260109100237_initial-setup-fileshare.sql  20260110193223_eagerly_delete_verifications.sql
backend/src/: api_tests.rs  controllers.rs  dtos.rs  entities.rs  lib.rs  repositories.rs  services.rs  utils.rs
backend/src/controllers/: upload_controller.rs  user_controller.rs
backend/src/dtos/: entity_response_dtos.rs  request_dtos.rs  response_dtos.rs
backend/src/entities/: upload_entity.rs  user_entity.rs  verification_entity.rs
backend/src/repositories/: upload_repository.rs  user_repository.rs  verification_repository.rs
backend/src/services/: auth_service.rs  discord_service.rs  email_service.rs  upload_service.rs  user_service.rs
docker-nginx-conf/: localdev.conf
frontend/: .env.example  package-lock.json  package.json  svelte.config.js  svelte.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: types.ts
frontend/src/lib/api/: auth.svelte.ts  axios.ts  (+1 more)
frontend/src/routes/: +layout.svelte  +page.svelte
terraform/: .terraform.lock.hcl  aws_networking.tf  cloudflare_dns.tf  cloudfront.js  cloudfront_distribution.tf  ec2_apigw_backend.tf  ec2_userdata.tftpl  ec2_userdata.tpl  lambda_apigw_backend.tf  main.tf  outputs.tf  rds_postgres_db.tf  s3_buckets.tf  variables.tf  vpc.tf
(+14 files in other folders)
